--- a/index.html
+++ b/index.html
@@ -4,16 +4,240 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Modern Business - Start Bootstrap</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
+
 <body>
-    
+    <!-- Header -->
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container">
+                <a class="navbar-brand text-white" href="#">Start Bootstrap</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- herosection -->
+    <div class="bg-dark py-4">
+        <div class="container">
+            <div class="row py-5 justify-content-center justify-content-xl-start">
+                <div class="col-12 col-lg-4 col-xl-7 col-lg-8">
+                    <div class="text-center text-xl-start">
+                        <h1 class="text-white display-5 fw-bolder">A Bootstrap 5 template for modern businesses</h1>
+                        <p class="text-white-50 fs-5">Quickly design and customize responsive mobile-first sites with
+                            Bootstrap, the world’s most
+                            popular front-end open source toolkit!</p>
+                            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
+                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
+                                <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-12 d-none d-xl-block col-xl-5">
+                    <img src="/assets/img/600x400.png" class="img-fluid rounded-3">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Icons -->
+    <div class="bg-white py-4 mt-5 mb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-12 col-12 mb-5">
+                    <h2 class="fw-bolder px-3">A better way to start building.</h2>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 px-5">
+                    <div>
+                        <i class="bi bi-collection fs-2 bg-primary py-1 px-2 rounded-3" style="color:white"></i>
+                        <h5 class="mt-4 fw-bolder">Featured title</h5>
+                        <p class="text-muted">Paragraph of text beneath the heading to explain the heading. Here is just
+                            a
+                            bit more text.</p>
+                    </div>
+                    <div class="mt-5">
+                        <i class="bi bi-collection fs-2 bg-primary py-1 px-2 rounded-3" style="color:white"></i>
+                        <h5 class="mt-4 fw-bolder">Featured title</h5>
+                        <p class="text-muted">Paragraph of text beneath the heading to explain the heading. Here is just
+                            a
+                            bit more text.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 px-5">
+                    <div>
+                        <i class="bi bi-collection fs-2 bg-primary py-1 px-2 rounded-3" style="color:white"></i>
+                        <h5 class="mt-4 fw-bolder">Featured title</h5>
+                        <p class="text-muted">Paragraph of text beneath the heading to explain the heading. Here is just
+                            a
+                            bit more text.</p>
+                    </div>
+                    <div class="mt-5">
+                        <i class="bi bi-collection fs-2 bg-primary py-1 px-2 rounded-3" style="color:white"></i>
+                        <h5 class="mt-4 fw-bolder">Featured title</h5>
+                        <p class="text-muted">Paragraph of text beneath the heading to explain the heading. Here is just
+                            a
+                            bit more text.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Testimonial section -->
+    <div class="bg-light py-4">
+        <div class="container px-5 my-5">
+            <div class="d-flex justify-content-center py-4">
+                <div class="col-lg-8">
+                    <p class="fs-4 fst-italic text-center">
+                        "Working with Start Bootstrap templates has saved me tons of development time when building new
+                        projects! Starting with a Bootstrap template just makes things easier!"
+                    </p>
+                    <div class="row justify-content-center">
+                        <div class="col-auto">
+                            <img src="/assets/img/40x40.png" class="rounded-circle">
+                        </div>
+                        <div class="col-auto">
+                            <p class="fw-bolder pt-2">Tom Ato <span class="text-primary">/</span> CEO, Pomodoro</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Blog section -->
+    <div class="bg-white py-4">
+        <div class="container">
+            <div>
+                <h2 class="text-center fw-bolder py-2">From our blog</h2>
+                <p class="text-center text-muted fs-5 px-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Eaque
+                    fugit ratione dicta mollitia. Officiis ad.
+                </p>
+            </div>
+            <div class="row mt-5">
+                <div class="col-12 col-lg-4 mt-5">
+                    <div class="card shadow-lg border-0">
+                        <img src="/assets/img/600x350.png" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <span class="badge text-bg-primary rounded-3 my-2">News</span>
+                            <h5 class="card-title">Blog post title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="row pt-5">
+                                <div class="col-auto">
+                                    <img src="/assets/img/40x40.png" class="rounded-circle">
+                                </div>
+                                <div class="col-auto">
+                                    <h6 class="small fw-bolder">Kelly Rowan</h6>
+                                    <small class="text-muted">March 12, 2023 - 6 min read </small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 mt-5">
+                    <div class="card shadow-lg border-0">
+                        <img src="/assets/img/600x350.png" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <span class="badge text-bg-primary rounded-3 my-2">News</span>
+                            <h5 class="card-title">Blog post title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="row pt-5">
+                                <div class="col-auto">
+                                    <img src="/assets/img/40x40.png" class="rounded-circle">
+                                </div>
+                                <div class="col-auto">
+                                    <h6 class="small fw-bolder">Kelly Rowan</h6>
+                                    <small class="text-muted">March 12, 2023 - 6 min read </small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 mt-5">
+                    <div class="card shadow-lg border-0">
+                        <img src="/assets/img/600x350.png" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <span class="badge text-bg-primary rounded-3 my-2">News</span>
+                            <h5 class="card-title">Blog post title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="row pt-5">
+                                <div class="col-auto">
+                                    <img src="/assets/img/40x40.png" class="rounded-circle">
+                                </div>
+                                <div class="col-auto">
+                                    <h6 class="small fw-bolder">Kelly Rowan</h6>
+                                    <small class="text-muted">March 12, 2023 - 6 min read </small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- email -->
+    <div class="container mb-5">
+        <aside class="bg-primary bg-gradient rounded-3 p-4 p-sm-5 mt-5">
+            <div
+                class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start">
+                <div class="mb-4 mb-xl-0">
+                    <div class="fs-3 fw-bold text-white">New products, delivered to you.</div>
+                    <div class="text-white-50">Sign up for our newsletter for the latest updates.</div>
+                </div>
+                <div class="ms-xl-4">
+                    <div class="input-group mb-2">
+                        <input class="form-control" type="text" placeholder="Email address..."
+                            aria-label="Email address..." aria-describedby="button-newsletter" />
+                        <button class="btn btn-outline-light" id="button-newsletter" type="button">Sign up</button>
+                    </div>
+                    <div class="small text-white-50">We care about privacy, and will never share your data.</div>
+                </div>
+            </div>
+        </aside>
+    </div>
+
+    <!-- footer -->
+    <footer class="bg-dark py-4">
+        <div class="container">
+            <div class="d-flex justify-content-between">
+                <small class="text-white">
+                    Copyright © Your Website 2025
+                </small>
+                <div class="col-auto text-white">
+                    <a href="" class="text-white">Privacy</a> -
+                    <a href="" class="text-white">Terms</a> -
+                    <a href="" class="text-white">Contact</a>
+                </div>
+            </div>
+
+        </div>
+    </footer>
 
 
-<!-- Bootstrap JS -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
