--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                             <a class="nav-link text-white" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">About</a>
+                            <a class="nav-link text-white" href="about/index.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Contact</a>
+                            <a class="nav-link text-white" href="/contact/index.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -50,7 +50,7 @@
                             popular front-end open source toolkit!</p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-                                <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
+                                <a class="btn btn-outline-light btn-lg px-4" href="/contact/index.html">Learn More</a>
                             </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
         </div>
     </div>
     <!-- Icons -->
-    <div class="bg-white py-4 mt-5 mb-5">
+    <div class="bg-white py-4 mt-5 mb-5" id="features">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-12 col-12 mb-5">
@@ -229,7 +229,7 @@
                 <div class="col-auto text-white">
                     <a href="" class="text-white">Privacy</a> -
                     <a href="" class="text-white">Terms</a> -
-                    <a href="" class="text-white">Contact</a>
+                    <a href="/contact/index.html" class="text-white">Contact</a>
                 </div>
             </div>
 
